--- a/build.yaml
+++ b/build.yaml
@@ -18,9 +18,9 @@
 #     artifact-name: corne_left_with_studio
 #
 include:
-  - board: nrf52840_m2
+  - board: nice_nano_v2
     shield: caldera_left
-  - board: nrf52840_m2
+  - board: nice_nano_v2
     shield: caldera_right
-  - board: nrf52840_m2
+  - board: nice_nano_v2
     shield: settings_reset
